--- a/bin/lsrc.in
+++ b/bin/lsrc.in
@@ -297,7 +297,7 @@ DEST_STACK=
 
 handle_command_line "$@"
 
-: ${DOTFILES_DIRS:=$DOTFILES_DIRS $DEFAULT_DOTFILES_DIR}
+: ${DOTFILES_DIRS:=$DOTFILES_DIRS $DEFAULT_DOTFILES_DIRS}
 $DEBUG "DOTFILES_DIRS: $DOTFILES_DIRS"
 
 : ${COPY_ALWAYS:=""}
