--- a/NEWS.md.in
+++ b/NEWS.md.in
@@ -1,5 +1,7 @@
 rcm (@PACKAGE_VERSION@) unstable; urgency=low
 
+  * Feature: XDG Base Directory Specification Compliance (Edd Salkield).
+
  -- Mike Burns <mburns@thoughtbot.com>  Fri, 13 Jul 2018 14:12:00 -0500
 
 rcm (1.3.3) unstable; urgency=low
