--- a/bin/rcup.in
+++ b/bin/rcup.in
@@ -256,6 +256,7 @@ handle_command_line() {
 
   handle_common_flags rcup $version $verbosity
   hostname="$(determine_hostname "$hostname")"
+  HOSTNAME="$(determine_hostname "$hostname")"
 
   tags="${arg_tags:-$TAGS}"
   DOTFILES_DIRS="${dotfiles_dirs:-$DOTFILES_DIRS}"
